--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,37 +1,153 @@
-body {
-  background-color: grey;
-  font-family: Arial, Helvetica, sans-serif;
+* {
+  margin: auto;
+  width: 100%;
+  padding: 0;
 }
 
-#head {
-  width: 960px;
-  margin: 0 auto;
-}
 header {
+  height: 77px;
   background-color: #ffffff;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  width: auto;
   overflow: auto;
-  margin-bottom: 50x;
 }
+.insideheader {
+  width: 960px;
+}
+body {
+  max-width: auto;
+  color: #777777;
+  background-image: url("../images/gravel.png");
+}
+
 h1 {
-  padding: 10px;
-  background-color: #00b3b3;
-  color: #ffffff;
+  width: auto;
+  padding: 20px;
   float: left;
+  background-color: #4aaaa5;
+  color: #ffffff;
 }
 ul {
-  list-style-type: none;
-  margin-top: 35px;
-  padding: 0;
   float: right;
+  width: auto;
+  height: max-content;
 }
 li {
+  width: auto;
   display: inline-block;
+  text-align: center;
+  overflow: hidden;
+  margin: 6px;
+  margin-top: 30px;
+  border-right: 1px solid #777777;
+  padding-right: 20px;
+}
+li:last-child {
+  border: none;
 }
 a {
   text-decoration: none;
+  color: #777777;
 }
-
+.mainconcontainer {
+  height: 390px;
+  background-color: #ffffff;
+  margin-top: 20px;
+  max-width: 960px;
+  word-wrap: break-word;
+}
 h2 {
   clear: both;
+  margin: 20px 0 20px 20px;
+  color: #4aaaa5;
+}
+
+img {
+  width: 100px;
+  float: left;
+  margin-right: 10px;
+  margin-left: 0;
+}
+
+p {
+  float: left;
+  margin-left: 20px;
+  padding-right: 20px;
+  width: auto;
+  overflow: auto;
+  border-top-style: solid;
+  border-top-color: #777777;
+  padding-top: 20px;
+  margin-right: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 30px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  font-size: 12px;
+  background-color: #777777;
+  border-top-style: solid;
+  border-top-color: #4aaaa5;
+  color: #ffffff;
+  height: 25px;
+  padding-top: 20px;
+}
+
+form {
+  width: 960px;
+  padding-left: 20px;
+  box-sizing: border-box;
+  padding-right: 5%;
+}
+
+input[type="submit"] {
+  background-color: #4aaaa5;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: auto;
+}
+
+.porty {
+  position: relative;
+  padding-left: 20px;
+  height: 210px;
+  width: 275px;
+}
+
+.para {
+  position: absolute;
+  width: 275px;
+  height: 30px;
+  background-color: #4aaaa5;
+  margin-left: 20px;
+  margin-top: 180px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.para1 {
+  position: absolute;
+  width: 275px;
+  height: 30px;
+  background-color: #4aaaa5;
+  margin-left: 325px;
+  margin-top: 180px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.para2 {
+  position: absolute;
+  width: 275px;
+  height: 30px;
+  background-color: #4aaaa5;
+  margin-left: 630px;
+  margin-top: 180px;
+  color: #ffffff;
+  text-align: center;
 }
