--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,12 @@ a {
   color: white;
 }
 
+@media only screen and (max-width: 600px) {
+  .contactEmail {
+    font-size: 20px;
+  }
+}
+
 .fab {
   margin-bottom: 18px;
   color: white;
